force-app/main/default/objects/Result__c/fields/RPR_Syphilis__c.field-meta.xml
<CustomField>
    <fullName>RPR_Syphilis__c</fullName>
    <label>RPR (Syphilis)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Detected</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>