force-app/main/default/objects/Result__c/fields/Scan_ET__c.field-meta.xml
<CustomField>
    <fullName>Scan_ET__c</fullName>
    <label>Scan ET</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>