force-app/main/default/objects/Result__c/recordTypes/Blood_Test.recordType-meta.xml
<RecordType>
    <fullName>Blood_Test</fullName>
    <active>true</active>
    <label>Blood Test</label>
</RecordType>