force-app/main/default/objects/Result__c/recordTypes/Pregnancy_Test.recordType-meta.xml
<RecordType>
    <fullName>Pregnancy_Test</fullName>
    <active>true</active>
    <label>Pregnancy Test</label>
</RecordType>