force-app/main/default/objects/Result__c/recordTypes/Prepair_Bloods.recordType-meta.xml
<RecordType>
    <fullName>Prepair_Bloods</fullName>
    <active>true</active>
    <label>Prepair Bloods</label>
</RecordType>