force-app/main/default/objects/Result__c/recordTypes/PRP_Scan.recordType-meta.xml
<RecordType>
    <fullName>PRP_Scan</fullName>
    <active>true</active>
    <label>PRP Scan</label>
</RecordType>