force-app/main/default/objects/Result__c/recordTypes/Testicular_Work_Up_Unexplained_Oligospermia.recordType-meta.xml
<RecordType>
    <fullName>Testicular_Work_Up_Unexplained_Oligospermia</fullName>
    <active>true</active>
    <label>Testicular Work Up/Unexplained Oligospermia</label>
</RecordType>