force-app/main/default/objects/Result__c/recordTypes/Thrombophilia_Screening.recordType-meta.xml
<RecordType>
    <fullName>Thrombophilia_Screening</fullName>
    <active>true</active>
    <label>Thrombophilia Screening</label>
</RecordType>